ghost/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: '20m'
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
      - shpiel.chevrutah.com
      secretName: shpiel-chevrutah-tls
      - pillemer.org
      secretName: shpiel-chevrutah-tls
  rules:
    - host: shpiel.chevrutah.com
      http:
        paths:
          - path: /
            backend:
              serviceName: ghost-first
              servicePort: 80
    - host: pillemer.org
      http:
        paths:
          - path: /
            backend:
              serviceName: ghost-first
              servicePort: 80
